instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: ')' expected but '=' found.
setCouleurBrosse(C:r=0,g=0,b=192)
                    ^