instructions.Instructions.scala.code
setCouleurBrosse(C:r=0,g=0,b=192)
baisseBrosse()
avance()
avance()
droite()
avance()
avance()
droite() 
avance()
avance()
droite()
avance()
avance()
leveBrosse()
droite()
avance()
droite()
avance()